# Backend/src/main/java/de/sophieherstein/chat_app_backend/user/dto/UpdateUsernameRequest.java
@@ -1,0 +1,11 @@
+package de.sophieherstein.chat_app_backend.user.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+
+public record UpdateUsernameRequest(
+        @NotBlank
+        @Size(min = 3, max = 50)
+        String username
+) {
+}
